Still dealign with firefox color issue, separated two id's: weekday-rides and weekend-rides

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -172,6 +172,10 @@
   background-color: red;
 }
 
-#weekday-rides, #weekend-rides {
+#weekday-rides {
+  color: black;
+} 
+
+#weekend-rides {
   color: black;
 }
